[ FIX ] ansible_user

--- a/ansible/roles/common/templates/90-ansible-user.j2
+++ b/ansible/roles/common/templates/90-ansible-user.j2
@@ -2,4 +2,4 @@
 # This template grants the user running the Ansible playbook
 # passwordless sudo access.
 # {{ ansible_user }} is a magic variable that holds the remote user name.
-{{ ansible_remote_user }} ALL=(ALL) NOPASSWD: ALL
+{{ ansible_user }} ALL=(ALL) NOPASSWD: ALL
