--- a/ansible/roles/registry/templates/config.yml.j2
+++ b/ansible/roles/registry/templates/config.yml.j2
@@ -25,11 +25,8 @@ auth:
 http:
   addr: :5000
   net: tcp
-  host: https://{{ registry_domain }}
+  host: http://{{ registry_domain }}
   draintimeout: 20s
-  tls:
-    certificate: /etc/docker/registry/tls/fullchain.pem
-    key: /etc/docker/registry/tls/privkey.pem
   debug:
     addr: :5001
     prometheus:
