[ FIX ] change to a mirror registry

--- a/ansible/roles/registry/templates/config.yml.j2
+++ b/ansible/roles/registry/templates/config.yml.j2
@@ -28,6 +28,8 @@ http:
     prometheus:
       enabled: true
       path: /metrics
+proxy:
+  remoteurl: https://registry-1.docker.io
 health:
   storagedriver:
     enabled: true
